--- a/css/screen.css
+++ b/css/screen.css
@@ -11,6 +11,7 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
 
 /*
   Setting type to a major third modular scale
+  http://www.modularscale.com/?1&em&1.25&web&text
 */
 
 html {
@@ -29,6 +30,12 @@ h2 {
   font-size: 1.953em; /* 35.156px @ 18px em */
   line-height: 1.28em; /* 45px @ 35.156px em */
   padding-bottom: 0.64em; /* 22.5px @ 35.159px em */
+}
+
+h3 {
+  font-size: 1.563em; /* 28.125px @ 18px em */
+  line-height: 1.6em; /* 45px @ 28.125px em */
+  padding-bottom: 0.8em; /* 22.5px @ 28.125px em */
 }
 
 p,
