--- a/css/screen.css
+++ b/css/screen.css
@@ -50,3 +50,13 @@ li {
 li:last-child {
   padding-bottom: 0;
 }
+
+img, 
+video {
+  display:block;
+  max-width: 100%;
+}
+
+/* ===== LAYOUT STYLES ===== */
+/* ===== MODULAR STYLES ===== */
+/* ===== STATE STYLES ===== */
