--- a/css/screen.css
+++ b/css/screen.css
@@ -15,6 +15,9 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
 */
 
 html {
+  color: white;
+  background-color: teal;
+  font-family: sans-serif;
   font-size: 1.125em; /* 18px */
   line-height: 1.25em; /* 22.5px @ 18px em = 1 gridline */
   padding: 1.25em 1.25em; /* 22.5px @ 18px em */
@@ -43,13 +46,31 @@ ul {
   padding-bottom: 1.25em; /* 22.5px : html line-height */
 }
 
+ul li ul li{ /* list inside a list */
+  list-style: square inside;
+}
+
+ul li ul li ul li{ /* list inside a list inside a list */
+  list-style: disc inside;
+  padding-left: 1.25em; /* 22.5px @ 18px em */
+}
+
+ul li ul li ul li ul li{ /* list inside a list inside a list inside a list */
+  list-style: circle inside;
+  padding-left: 1.25em; /* 22.5px @ 18px em */
+}
+
 li {
-  padding-bottom: 0.625em; /* 11.25px */
+  padding-bottom: 0.625em; /* 11.25px @ 18px em */
 }
 
 li:last-child {
   padding-bottom: 0;
 }
+
+ ul li ul li:first-child{
+  padding-top: 0.625em; /* 11.25px @ 18px em */
+ }
 
 img, 
 video {
