--- a/css/screen.css
+++ b/css/screen.css
@@ -20,6 +20,9 @@ html {
   font-family: sans-serif;
   font-size: 1.125em; /* 18px */
   line-height: 1.25em; /* 22.5px @ 18px em = 1 gridline */
+}
+
+#page {
   padding: 1.25em 1.25em; /* 22.5px @ 18px em */
 }
 nav {
@@ -100,6 +103,7 @@ li:last-child {
 }
 
 .nav li {
+  display: block;
   float: left;
   width: 25%;
   list-style-type: none;
@@ -116,7 +120,9 @@ nav {
 }
 
 .nav {
+  display: block;
   margin-left: 0;
+  margin-right: 0;
   padding-bottom: 0;
 }
 
@@ -124,7 +130,7 @@ nav {
   display: block;
   text-align: center;
   line-height: 1;
-  padding: 0.6315789474em 0.3157894737em; /* ~ 12px 6px @ 19px/em */
+  padding: 0.666em 0.333em; /* ~ 12px 6px @ 18px/em */
   background-color: black;
   color: white;
   border-bottom: 0;
