--- a/css/screen.css
+++ b/css/screen.css
@@ -67,10 +67,7 @@ video,
   max-width: 100%;
   max-height: 100%;
   padding-bottom: 1.25em;
-}
-
-.gif {
-  padding-bottom: 1.25em;
+  margin: 0 auto;
 }
 
 /* ===== LAYOUT STYLES ===== */
@@ -145,3 +142,12 @@ nav {
 }
 
 /* ===== STATE STYLES ===== */
+
+#active a {
+  color: black;
+  background-color: white;
+}
+
+a:hover {
+  background-color: gray;
+}
