--- a/css/screen.css
+++ b/css/screen.css
@@ -17,7 +17,7 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
 html {
   color: white;
   background-color: teal;
-  font-family: sans-serif;
+  font-family: Helvetica, Futura, "Trebuchet MS", Arial, sans-serif;
   font-size: 1.125em; /* 18px */
   line-height: 1.25em; /* 22.5px @ 18px em = 1 gridline */
 }
@@ -178,11 +178,12 @@ a:hover {
   border-bottom: 0.05263157895em dotted;
 }
 
-@media screen and (min-width: 430px) {
+/*430px  @ 16px em */
+@media screen and (min-width: 26.875em) {
   nav {
     font-size: 1em; /* 18px @ 18px em */
   }
-  .nav a{
+  .nav a {
     line-height: 1;
   }
   video {
