Adding one more font to font family and testing theme color for chrome

--- a/css/screen.css
+++ b/css/screen.css
@@ -17,7 +17,7 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
 html {
   color: white;
   background-color: teal;
-  font-family: Helvetica, Futura, "Trebuchet MS", Arial, sans-serif;
+  font-family: Roboto, Helvetica, Futura, "Trebuchet MS", Arial, sans-serif;
   font-size: 1.125em; /* 18px */
   line-height: 1.25em; /* 22.5px @ 18px em = 1 gridline */
 }
