--- a/css/screen.css
+++ b/css/screen.css
@@ -109,10 +109,10 @@ ul li ul:last-child {
   padding-bottom: 0;
 }
 
-#pets .photo p,
-#pets .video p {
+#pets .photo p {
   padding-bottom: 0;
 }
+
 
 .nav li {
   display: block;
@@ -137,6 +137,10 @@ ul li ul li:first-child {
 
 #volunteer-work ul li ul li {
   list-style: none;
+}
+
+#resume-footer {
+  padding-top: 1.25em; /* 22.5px @ 18px em */
 }
 
 /* Navigation */
@@ -186,8 +190,32 @@ a:hover {
   .nav a {
     line-height: 1;
   }
+
+  video,
+  img {
+    max-height: 80vh;
+  }
+}
+
+/*600px  @ 16px em */
+@media screen and (min-width: 37.5em) {
+#page {
+  padding-left: 2.6666666667%; /* 16 px out of 600px */
+  padding-right: 2.6666666667%; /* 16 px out of 600px */
+}
   video {
-    max-height: 100vh;
+    margin: 0;
+    max-height: auto;
+    width: 48.5915492958%;
+  }
+
+  #shelly-text {
+    float: right;
+    width: 48.5915492958%;
+  }
+
+  footer{
+    clear: both;
   }
 }
 
