--- a/css/screen.css
+++ b/css/screen.css
@@ -93,12 +93,12 @@ ul li ul li { /* list inside a list */
 
 ul li ul li ul li { /* list inside a list inside a list */
   list-style: disc inside;
-  padding-left: 1.25em; /* 22.5px @ 18px em */
+  padding-left: 0.625em; /* 11.25px @ 18px em Half a gridline */
 }
 
 ul li ul li ul li ul li { /* list inside a list inside a list inside a list */
   list-style: circle inside;
-  padding-left: 1.25em; /* 22.5px @ 18px em */
+  padding-left: 0.625em; /* 11.25px @ 18px em Half a gridline */
 }
 
 li:last-child {
@@ -216,6 +216,14 @@ a:hover {
 
   footer {
     clear: both;
+  }
+
+  ul li ul li ul li { /* list inside a list inside a list */
+    padding-left: 1.25em; /* 22.5px @ 18px em */
+  }
+
+  ul li ul li ul li ul li { /* list inside a list inside a list inside a list */
+    padding-left: 1.25em; /* 22.5px @ 18px em */
   }
 }
 
