--- a/css/screen.css
+++ b/css/screen.css
@@ -203,6 +203,7 @@ a:hover {
     padding-left: 2.6666666667%; /* 16 px out of 600px */
     padding-right: 2.6666666667%; /* 16 px out of 600px */
   }
+
   video {
     margin: 0;
     max-height: auto;
@@ -227,3 +228,15 @@ a:hover {
   }
 }
 
+/*840 @ 16px em */
+@media screen and (min-width: 52.5em) {
+  #page {
+    padding-left: 10.9523809524%; /* 92 px out of 600px */
+    padding-right: 10.9523809524%; /* 92 px out of 600px */
+  }
+
+  video {
+    margin: 0;
+    width: 48.1707317073%; /* 316/656*100 */
+  }
+}
