--- a/css/screen.css
+++ b/css/screen.css
@@ -197,7 +197,7 @@ a:hover {
   }
 }
 
-/*600px  @ 16px em */
+/*600px  @ 16px em 8 columns at 57px each and 16px gutters */
 @media screen and (min-width: 37.5em) {
   #page {
     padding-left: 2.6666666667%; /* 16 px out of 600px */
@@ -228,15 +228,23 @@ a:hover {
   }
 }
 
-/*840 @ 16px em */
+/*840px @ 16px em 12 columns at 44px each and 24px gutters */
 @media screen and (min-width: 52.5em) {
   #page {
-    padding-left: 10.9523809524%; /* 92 px out of 600px */
-    padding-right: 10.9523809524%; /* 92 px out of 600px */
+    padding-left: 10.9523809524%; /* 92px out of 840px */
+    padding-right: 10.9523809524%; /* 92px out of 840px */
   }
 
   video {
     margin: 0;
     width: 48.1707317073%; /* 316/656*100 */
+  }
+}
+
+/* 1032px @ 16px em 12 columns at 60px each and 24px gutters */
+@media screen and (min-width: 64.5em) {
+  #page {
+    padding-left: 18.6046511628%; /* 192px out of 1032px */
+    padding-right: 10.46511628%; /* 108px out of 1032px */
   }
 }
