--- a/css/screen.css
+++ b/css/screen.css
@@ -207,12 +207,12 @@ a:hover {
   video {
     margin: 0;
     max-height: auto;
-    width: 48.5915492958%;
+    width: 48.5915492958%; /*4 columns */
   }
 
   #shelly-text {
     float: right;
-    width: 48.5915492958%;
+    width: 48.5915492958%; /*4 columns */
   }
 
   footer {
@@ -252,27 +252,27 @@ a:hover {
   #starved3 {
     float: right;
     max-height: auto;
-    width: 48.3333333333%;
+    width: 48.3333333333%; /* Added a 24px gutter between both images */
   }
 
   #dunes4,
   #starved4 {
     max-height: auto;
-    width: 48.3333333333%;
+    width: 48.3333333333%; /* Added a 24px gutter between both images */
   }
 
   #dunes3 {
-    padding-top: 0.625em;
+    padding-top: 0.625em; 
   }
 
   #starved1 {
     max-height: auto;
-    width: 48.3333333333%;
+    width: 48.3333333333%; /* Added a 24px gutter between both images */
   }
 
   #starvedrock-text {
     float: right;
-    width: 48.3333333333%;
+    width: 48.3333333333%; /* Added a 24px gutter between both images */
   }
 }
 
